fixing header on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ main#home h1 {
     transition: all 0.5s ease-out;
   }
   h3.lg-heading {
-    font-size: 4rem;
+    font-size: 5rem;
   }
 }
 
